# products-list-task

./: .gitignore  pyproject.toml
productslist/: manage.py
productslist/products/: models.py  serializers.py  urls.py  viewsets.py
productslist/products/migrations/: 0001_initial.py
productslist/productslist/: asgi.py  settings.py  urls.py  wsgi.py
